opam-version: "2.0"
maintainer: ""
authors: [ "" ]
homepage: ""
bug-reports: ""
dev-repo: "git+https://github.com/"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune" { build & >= "1.7" }
  "getopt"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
synopsis: ""

